--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "sweetalert2": "^10.6.1",
     "vee-validate": "^3.4.2",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
