--- a/public/fontello/config.json
+++ b/public/fontello/config.json
@@ -37,10 +37,16 @@
       "src": "fontawesome"
     },
     {
-      "uid": "25fc99a30fecc4021fdcae5fff5ba9ac",
+      "uid": "d218294e6f9f7191f6b0b3d1ff6239ff",
+      "css": "eye-off",
+      "code": 57602,
+      "src": "elusive"
+    },
+    {
+      "uid": "e45a3da2ebde8bc8e30a873f3bd51f30",
       "css": "eye",
-      "code": 59146,
-      "src": "entypo"
+      "code": 57501,
+      "src": "elusive"
     }
   ]
 }
