--- a/public/fontello/config.json
+++ b/public/fontello/config.json
@@ -47,6 +47,12 @@
       "css": "eye",
       "code": 57501,
       "src": "elusive"
+    },
+    {
+      "uid": "e45e9f27ce40ba9837cc984076d98067",
+      "css": "search",
+      "code": 57406,
+      "src": "elusive"
     }
   ]
 }
